--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
+    "react-native-timer": "^1.3.1",
     "react-navigation": "^1.4.0"
   }
 }
