--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "easytimer.js": "^2.1.0",
     "eslint": "^4.18.2",
     "expo": "^25.0.0",
+    "firebase": "^4.11.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
