--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-ci-tools": "^1.1.0",
     "react-native-elements": "^0.19.0",
     "react-native-timer": "^1.3.1",
-    "react-navigation": "^1.4.0"
+    "react-navigation": "^1.4.0",
+    "tcomb-form-native": "^0.6.11"
   }
 }
