timer form adding intervals

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^4.18.2",
     "expo": "^25.0.0",
     "firebase": "^4.11.0",
+    "lodash": "^4.17.5",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-ci-tools": "^1.1.0",
